# tech-test

./: .gitignore  README.md  default.nix  nodeFile  run-nodes  stack.yaml  tech-test.cabal
nixops/: .envrc  logical.nix
nixops/aws/: .envrc  aws.nix  awsstate.nixops
src/: Main.hs
